crates/tokmd-format/tests/snapshots/snapshot_w70__w70_lang_md_single_lang.snap
---
source: crates/tokmd-format/tests/snapshot_w70.rs
expression: out
---
|Lang|Code|Lines|Files|Bytes|Tokens|Avg|
|---|---:|---:|---:|---:|---:|---:|
|Go|750|950|6|22500|7500|158|
|**Total**|750|950|6|22500|7500|158|
