crates/tokmd-format/tests/snapshots/snapshot_w70__w70_lang_tsv_empty.snap
---
source: crates/tokmd-format/tests/snapshot_w70.rs
expression: out
---
Lang	Code	Lines	Bytes	Tokens
Total	0	0	0	0
